Fixed alignment for the header menu

--- a/styles/src/components/_page.scss
+++ b/styles/src/components/_page.scss
@@ -57,11 +57,11 @@ $nav-bar-height: 38px;
         > .ias-header-bar_title {
             flex-grow: 1;
             font-size: 20px;
-            padding-left: 15px;
+            margin-left: 15px;
         }
 
         > .ias-header-bar_menu {
-            padding-right: 15px;
+            margin-right: 15px;
             position: relative;
 
             > a {
